# Portfolio_manager

./: .gitignore  README.md  pyproject.toml
logger/: logging_config.py
src/: app_manager.py  main.py  test_gui.py
src/app_functions/: import_current_portfolio.py  import_erste_market_assets.py
src/db/: create_db.py  investments.db  table_definitions.py
src/db/data_load/: PB_Modell_Portfoliok_es_Shortlist_20240718.xls  portfolio_diversification_starter.xlsx
src/gui/: app.py  build.py  get_structure.py  gui_functions.py  main_window.py  menu_builder.py  structure.json  structure.py  styling.py
