[tool.poetry]
name = "portfolio-manager"
version = "0.1.0"
description = "Portfolio manager on various stock exchanges"
authors = ["zolcsika71 <bushdoctor2008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

